# simple-renderer

./: .gitignore  LICENSE  README.md  Renderer.cpp  Renderer.h  cmakelists.txt  main.cpp  maths.h  mesh.cpp  mesh.h  rendertri.cpp  shader.cpp  shader.h  test.cpp  test.h
core/: common.h  maths.cpp  maths.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h
lib/: maths.cpp
shader/: basic_shader.cpp  phong_shader.cpp  shader.cpp  shader.h  toon_shader.cpp
src/: common.h  utils.cpp
src/app/: camera_controller.cpp  camera_controller.h  main.cpp  scene_manager.cpp
src/core/: framebuffer.cpp  framebuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  renderer_fragment.cpp  renderer_pipeline.cpp  renderer_vertex.cpp  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  texture.cpp  texture.h
src/core/pipeline/: pipeline.cpp
src/graphics/: camera.cpp  camera.h  material.cpp  material.h
src/lib/: IResource.h  common.h  maths.cpp  maths.h
src/lib/texture/: CMakeLists.txt  sampler_state.h  texture.cpp  texture.h  texture_io.cpp  texture_io.h  texture_sampler.cpp  texture_sampler.h  texture_types.h  texture_utils.cpp  texture_utils.h
src/platform/: platform.h  platform_sdl.cpp
src/scene/: camera_controller.cpp  camera_controller.h
src/shader/: basic_shader.cpp  phong_shader.cpp  shader.h  shadow_map_shader.cpp  textured_phong_shader.cpp  toon_shader.cpp
src/utils/: profiler.h  utils.hpp
test/texture_test/: CMakeLists.txt  texture_test.cpp
